en/2.0/config/proxy.rst
==============
Proxy settings
==============

This page is generated by Machine Translation from Japanese.

For the crawler proxy settings
==============================

If you like crawling external sites from within the intranet firewall
may end up blocked crawl. Set the proxy for the crawler in that case.

How to set up
-------------

Proxy is set in to create
webapps/Fess/Web-INF/classes/s9robot\_client.dicon with the following
contents.

::

    <?xml version="1.0" encoding="UTF-8"?>
    <!DOCTYPE components PUBLIC "-//SEASAR//DTD S2Container 2.4//EN"
        "http://www.seasar.org/dtd/components24.dtd">
    <components>
        <include path="s2robot_robotstxt.dicon"/>
        <include path="s2robot_contentlength.dicon"/>

        <component name="httpClient" class="org.seasar.robot.client.http.CommonsHttpClient" instance="prototype">
            <property name="cookiePolicy">@org.apache.commons.httpclient.cookie.CookiePolicy@BROWSER_COMPATIBILITY</property>
            <property name="proxyHost">"プロキシホスト名"</property>
            <property name="proxyPort">プロキシポート</property>
            <!-- プロキシに認証がある場合
            <property name="proxyCredentials">
                <component class="org.apache.commons.httpclient.UsernamePasswordCredentials">
                    <arg>"プロキシ用ユーザー名"</arg>
                    <arg>"プロキシ用パスワード"</arg>
                </component>
            </property>
            -->
        </component>

        <component name="fsClient" class="org.seasar.robot.client.fs.FileSystemClient" instance="prototype">
            <property name="charset">"UTF-8"</property>
        </component>

        <component name="clientFactory" class="org.seasar.robot.client.S2RobotClientFactory" instance="prototype">
            <initMethod name="addClient">
                <arg>{"http:.*", "https:.*"}</arg>
                <arg>httpClient</arg>
            </initMethod>
            <initMethod name="addClient">
                <arg>"file:.*"</arg>
                <arg>fsClient</arg>
            </initMethod>
        </component>

    </components>
